Modification de l'apparence du loadign spinner, quelques retouches sur les pages de restaurants

--- a/a_la_française.html
+++ b/a_la_française.html
@@ -149,7 +149,7 @@
                     Mentions légales
                 </li>
                 <li class="foot">
-                    Contact
+                    <a href="mailto:yermsouhila@gmail.com" class="lien contact">Contact</a>
                 </li>
             </ul>
         </footer>
