--- a/index.html
+++ b/index.html
@@ -14,142 +14,146 @@
     </head>
     <body class="body">
         <section class="section">
-            <div class="loader load1"></div>
-            <div class="loader load2"></div>
-            <div class="loader load3"></div>
-            <div class="text">ohmyfood ...</div>
+            <div class="letter let1">o</div>
+            <div class="letter let2">h</div>
+            <div class="letter let3">m</div>
+            <div class="letter let4">y</div>
+            <div class="letter let5">f</div>
+            <div class="letter let6">o</div>
+            <div class="letter let7">o</div>
+            <div class="letter let8">d</div>
         </section>
         <div class="content">
-        <header class="body_header">
-            <h1 class="header_logo">ohmyfood</h1>
-        </header>
-        <main class="body_main">
-            <section class="description">
-                <div class="description_position">
-                    <i class="fas fa-map-marker-alt description_icone"></i> 
-                    <span>Paris, Belleville</span>
-                </div>
-                <div class="description_accroche">
-                    <h2>Réservez le menu qui vous convient</h2>
-                    <div class="description_text_accroche">Découvrez des restaurants d'exception</div> <br> <br>
-                    <a href="#resto" class="lien"><span class="bouton ">Explorer nos restaurants</span></a>
-                </div>
-            </section>
-            <section class="fonctionnement">
-                <h2 class="titre_de_section">Fonctionnement</h2>
-                <div class="fonctionnement_list_etapes">
-                    <div class="fonctionnement_etape">
-                        <span class="fonctionnement_nombre">1</span>
-                        <i class="fas fa-mobile-alt fonctionnement_icone"></i>
-                        <span class="fonctionnement_text"> Choisissez un restaurant</span>
+            <header class="body_header">
+                <h1 class="header_logo">ohmyfood</h1>
+            </header>
+            <main class="body_main">
+                <section class="description">
+                    <div class="description_position">
+                        <i class="fas fa-map-marker-alt description_icone"></i> 
+                        <span>Paris, Belleville</span>
                     </div>
-                    <div class="fonctionnement_etape">
-                        <span class="fonctionnement_nombre">2</span>
-                        <i class="fas fa-list-ul fonctionnement_icone"></i>
-                        <span class="fonctionnement_text"> Composez votre menu</span>
+                    <div class="description_accroche">
+                        <h2>Réservez le menu qui vous convient</h2>
+                        <div class="description_text_accroche">Découvrez des restaurants d'exception</div> <br> <br>
+                        <a href="#resto" class="lien"><span class="bouton ">Explorer nos restaurants</span></a>
                     </div>
-                    <div class="fonctionnement_etape">
-                        <span class="fonctionnement_nombre">3</span>
-                        <i class="fas fa-store fonctionnement_icone"></i>
-                        <span class="fonctionnement_text"> Dégustez au réstaurant</span>
-                    </div>
-                </div>
-            </section>
-            <section class="liste_des_restaurants" id="resto">
-                <h2 class="titre_de_section">Restaurants</h2>
-                <div class="restaurants">
-                    <div class="restaurants_carte">
-                        <a href="la_palette_du_gout.html" class="lien">
-                        <div class="restaurants_image">
-                            <img src="images/restaurants/la_palette_du_gout.jpg" class="restaurants_img" alt="restaurant la palette du gout"/>
-                            <span class="restaurants_nouveau">Nouveau</span>
+                </section>
+                <section class="fonctionnement">
+                    <h2 class="titre_de_section">Fonctionnement</h2>
+                    <div class="fonctionnement_list_etapes">
+                        <div class="fonctionnement_etape">
+                            <span class="fonctionnement_nombre">1</span>
+                            <i class="fas fa-mobile-alt fonctionnement_icone"></i>
+                            <span class="fonctionnement_text"> Choisissez un restaurant</span>
                         </div>
-                        <div class="restaurants_description">
-                            <div class="restaurants_et_lieu">
-                                <h3 class="restaurants_nom">la palette du goût</h3>
-                                <span class="restaurants_lieu"> Ménilmontant</span>
-                            </div>
-                            <div class="coeurs">
-                                <span class="coeurs_empty"><i class="far fa-heart coeurs_vide "></i></span>
-                                <span class="coeurs_full"><i class="fas fa-heart coeurs_plein"></i></span>
-                            </div>
+                        <div class="fonctionnement_etape">
+                            <span class="fonctionnement_nombre">2</span>
+                            <i class="fas fa-list-ul fonctionnement_icone"></i>
+                            <span class="fonctionnement_text"> Composez votre menu</span>
                         </div>
-                        </a>
+                        <div class="fonctionnement_etape">
+                            <span class="fonctionnement_nombre">3</span>
+                            <i class="fas fa-store fonctionnement_icone"></i>
+                            <span class="fonctionnement_text"> Dégustez au réstaurant</span>
+                        </div>
                     </div>
-                    <div class="restaurants_carte">
-                        <a href="la_note_enchantee.html" class="lien">
+                </section>
+                <section class="liste_des_restaurants" id="resto">
+                    <h2 class="titre_de_section">Restaurants</h2>
+                    <div class="restaurants">
+                        <div class="restaurants_carte">
+                            <a href="la_palette_du_gout.html" class="lien">
                             <div class="restaurants_image">
-                                <img src="images/restaurants/la_note_enchantee.jpg" class="restaurants_img" alt="la note enchantée"/>
+                                <img src="images/restaurants/la_palette_du_gout.jpg" class="restaurants_img" alt="restaurant la palette du gout"/>
                                 <span class="restaurants_nouveau">Nouveau</span>
                             </div>
                             <div class="restaurants_description">
                                 <div class="restaurants_et_lieu">
-                                    <h3 class="restaurants_nom">la note enchantée</h3>
-                                    <span class="restaurants_lieu"> Charonne</span>
+                                    <h3 class="restaurants_nom">la palette du goût</h3>
+                                    <span class="restaurants_lieu"> Ménilmontant</span>
                                 </div>
                                 <div class="coeurs">
                                     <span class="coeurs_empty"><i class="far fa-heart coeurs_vide "></i></span>
                                     <span class="coeurs_full"><i class="fas fa-heart coeurs_plein"></i></span>
                                 </div>
                             </div>
-                        </a>
+                            </a>
+                        </div>
+                        <div class="restaurants_carte">
+                            <a href="la_note_enchantee.html" class="lien">
+                                <div class="restaurants_image">
+                                    <img src="images/restaurants/la_note_enchantee.jpg" class="restaurants_img" alt="la note enchantée"/>
+                                    <span class="restaurants_nouveau">Nouveau</span>
+                                </div>
+                                <div class="restaurants_description">
+                                    <div class="restaurants_et_lieu">
+                                        <h3 class="restaurants_nom">la note enchantée</h3>
+                                        <span class="restaurants_lieu"> Charonne</span>
+                                    </div>
+                                    <div class="coeurs">
+                                        <span class="coeurs_empty"><i class="far fa-heart coeurs_vide "></i></span>
+                                        <span class="coeurs_full"><i class="fas fa-heart coeurs_plein"></i></span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="restaurants_carte">
+                            <a href="a_la_française.html" class="lien">
+                                <div class="restaurants_image">
+                                    <img src="images/restaurants/a_la_française.jpg" class="restaurants_img" alt="restaurant la palette du gout"/>
+                                </div>
+                                <div class="restaurants_description">
+                                    <div class="restaurants_et_lieu">
+                                        <h3 class="restaurants_nom">à la française</h3>
+                                        <span class="restaurants_lieu"> Cité Rouge</span>
+                                    </div>
+                                    <div class="coeurs">
+                                        <span class="coeurs_empty"><i class="far fa-heart coeurs_vide "></i></span>
+                                        <span class="coeurs_full"><i class="fas fa-heart coeurs_plein"></i></span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="restaurants_carte">
+                            <a href="le_delice_des_sens.html" class="lien">
+                                <div class="restaurants_image">
+                                    <img src="images/restaurants/le_delice_des_sens.jpg" class="restaurants_img" alt="restaurant la palette du gout"/>
+                                </div>
+                                <div class="restaurants_description">
+                                    <div class="restaurants_et_lieu">
+                                        <h3 class="restaurants_nom">le délice des sens</h3>
+                                        <span class="restaurants_lieu"> Folie-Méricourt</span>
+                                    </div>
+                                    <div class="coeurs">
+                                        <span class="coeurs_empty"><i class="far fa-heart coeurs_vide "></i></span>
+                                        <span class="coeurs_full"><i class="fas fa-heart coeurs_plein"></i></span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
-                    <div class="restaurants_carte">
-                        <a href="a_la_française.html" class="lien">
-                            <div class="restaurants_image">
-                                <img src="images/restaurants/a_la_française.jpg" class="restaurants_img" alt="restaurant la palette du gout"/>
-                            </div>
-                            <div class="restaurants_description">
-                                <div class="restaurants_et_lieu">
-                                    <h3 class="restaurants_nom">à la française</h3>
-                                    <span class="restaurants_lieu"> Cité Rouge</span>
-                                </div>
-                                <div class="coeurs">
-                                    <span class="coeurs_empty"><i class="far fa-heart coeurs_vide "></i></span>
-                                    <span class="coeurs_full"><i class="fas fa-heart coeurs_plein"></i></span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="restaurants_carte">
-                        <a href="le_delice_des_sens.html" class="lien">
-                            <div class="restaurants_image">
-                                <img src="images/restaurants/le_delice_des_sens.jpg" class="restaurants_img" alt="restaurant la palette du gout"/>
-                            </div>
-                            <div class="restaurants_description">
-                                <div class="restaurants_et_lieu">
-                                    <h3 class="restaurants_nom">le délice des sens</h3>
-                                    <span class="restaurants_lieu"> Folie-Méricourt</span>
-                                </div>
-                                <div class="coeurs">
-                                    <span class="coeurs_empty"><i class="far fa-heart coeurs_vide "></i></span>
-                                    <span class="coeurs_full"><i class="fas fa-heart coeurs_plein"></i></span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <footer class="footer">
-            <h2 class="footer_logo">ohmyfood</h2>
-            <ul class="footer_list">
-                <li class="foot">
-                    <i class="fas fa-utensils footer_icone"></i>
-                    <span>Proposer un restaurant</span>
-                </li>
-                <li class="foot">
-                    <i class="fas fa-hands-helping footer_icone"></i>
-                    <span>Devenir partenaire</span>
-                </li>
-                <li class="foot">
-                    Mentions légales
-                </li>
-                <li class="foot">
-                    Contact
-                </li>
-            </ul>
-        </footer>
+                </section>
+            </main>
+            <footer class="footer">
+                <h2 class="footer_logo">ohmyfood</h2>
+                <ul class="footer_list">
+                    <li class="foot">
+                        <i class="fas fa-utensils footer_icone"></i>
+                        <span>Proposer un restaurant</span>
+                    </li>
+                    <li class="foot">
+                        <i class="fas fa-hands-helping footer_icone"></i>
+                        <span>Devenir partenaire</span>
+                    </li>
+                    <li class="foot">
+                        Mentions légales
+                    </li>
+                    <li class="foot">
+                        <a href="mailto:yermsouhila@gmail.com" class="lien contact">Contact</a>
+                    </li>
+                </ul>
+            </footer>
         </div>
     </body>
 </html>
