--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="list_plat_et_tarif third">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Homard et espuma de...</span> <br>
+                            <span class="list_nom_du_plat">Homard et espuma de potiron</span> <br>
                             <span class="list_description">Mariné aux zests d'orange</span>       
                         </div>
                         <div class="list_prix_et_check">
@@ -159,7 +159,7 @@
                     Mentions légales
                 </li>
                 <li class="foot">
-                    Contact
+                    <a href="mailto:yermsouhila@gmail.com" class="lien contact">Contact</a>
                 </li>
             </ul>
         </footer>
