--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -33,7 +33,7 @@
                             <span class="list_description">Au piment d'espelette</span>                        </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 25€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                     <div class="list_plat_et_tarif second">
@@ -43,7 +43,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 35€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>                        
                     </div>
                     <div class="list_plat_et_tarif third">
@@ -53,7 +53,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 20€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix"> 40€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                     <div class="list_plat_et_tarif second">
@@ -78,7 +78,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">35€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                     <div class="list_plat_et_tarif third">
@@ -88,7 +88,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">44€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">18€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                     <div class="list_plat_et_tarif second">
@@ -113,7 +113,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">22€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                     <div class="list_plat_et_tarif third">
@@ -123,7 +123,7 @@
                         </div>
                         <div class="list_prix_et_check">
                             <div class="list_prix">23€</div>
-                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                            <div class="list_check"><i class="fas fa-check-circle check"></i></div>
                         </div>
                     </div>
                 </div>
@@ -149,7 +149,7 @@
                     Mentions légales
                 </li>
                 <li class="foot">
-                    Contact
+                    <a href="mailto:yermsouhila@gmail.com" class="lien contact">Contact</a>
                 </li>
             </ul>
         </footer>
