--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -149,7 +149,7 @@
                     Mentions légales
                 </li>
                 <li class="foot">
-                    Contact
+                    <a href="mailto:yermsouhila@gmail.com" class="lien contact">Contact</a>
                 </li>
             </ul>
         </footer>
