Ajout du coeur devant le nom du restaurant

--- a/a_la_française.html
+++ b/a_la_française.html
@@ -18,10 +18,13 @@
         </header>
         <main class="main">
             <div class="accueil">
-                <img src="images/restaurants/a_la_française.jpg" class="accueil_image">
+                <img src="images/restaurants/a_la_française.jpg" alt="a la française" class="accueil_image">
                 <div class="accueil_nom_et_coeur">
-                    <h2 class="accueil_nom">à la française</h2>
-                    <i class="fa-regular fa-heart"></i>
+                    <h2 class="accueil_nom">à la française</h2> 
+                    <div class="coeurs">
+                        <span class="coeurs_em"><i class="far fa-heart coeurs_vi "></i></span>
+                        <span class="coeurs_fu"><i class="fas fa-heart coeurs_pl"></i></span>
+                    </div>
                 </div>
             </div>
             <section class="list">
