--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -18,10 +18,13 @@
         </header>
         <main class="main">
             <div class="accueil">
-                <img src="images/restaurants/la_palette_du_gout.jpg" class="accueil_image">
+                <img src="images/restaurants/la_palette_du_gout.jpg" alt="la_palette_du_gout" class="accueil_image">
                 <div class="accueil_nom_et_coeur">
                     <h2 class="accueil_nom">la palette du goût</h2>
-                    <i class="fa-regular fa-heart"></i>
+                    <div class="coeurs">
+                        <span class="coeurs_em"><i class="far fa-heart coeurs_vi "></i></span>
+                        <span class="coeurs_fu"><i class="fas fa-heart coeurs_pl"></i></span>
+                    </div>
                 </div>
             </div>
             <section class="list">
@@ -83,7 +86,7 @@
                     </div>
                     <div class="list_plat_et_tarif third">
                         <div class="list_plat">
-                            <span class="list_nom_du_plat">Filet de Turbot</span> </span> <br>
+                            <span class="list_nom_du_plat">Filet de Turbot</span><br>
                             <span class="list_description">Aux agrumes</span>
                         </div>
                         <div class="list_prix_et_check">
