--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -18,10 +18,13 @@
         </header>
         <main class="main">
             <div class="accueil">
-                <img src="images/restaurants/le_delice_des_sens.jpg" class="accueil_image">
+                <img src="images/restaurants/le_delice_des_sens.jpg" alt="le delice des sens" class="accueil_image">
                 <div class="accueil_nom_et_coeur">
                     <h2 class="accueil_nom">le délice des sens</h2>
-                    <i class="fa-regular fa-heart"></i>
+                    <div class="coeurs">
+                        <span class="coeurs_em"><i class="far fa-heart coeurs_vi "></i></span>
+                        <span class="coeurs_fu"><i class="fas fa-heart coeurs_pl"></i></span>
+                    </div>
                 </div>
             </div>
             <section class="list">
