quelques modifications dans l'organisation du sass

--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -22,8 +22,8 @@
                 <div class="accueil_nom_et_coeur">
                     <h2 class="accueil_nom">La note enchantée</h2>
                     <div class="coeurs">
-                        <span class="coeurs_em"><i class="far fa-heart coeurs_vi "></i></span>
-                        <span class="coeurs_fu"><i class="fas fa-heart coeurs_pl"></i></span>
+                        <span class="coeurs_em"><i class="far fa-heart coeurs_vide "></i></span>
+                        <span class="coeurs_fu"><i class="fas fa-heart coeurs_plein"></i></span>
                     </div>
                 </div>
             </div>
